--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
     
     <header class="bg-secondary text-white text-center py-5">
         <div class="container">
-            <img src="sua-foto.jpg" alt="Sua Foto" class="rounded-circle" width="150" height="150">
+            <img src="images/Foto.jpg" alt="Sua Foto" class="rounded-circle" width="150" height="150">
             <h1 class="mt-3">Lucca Pereira Locambo De Oliveira</h1>
             <p>Estudante dedicado pela programação.</p>
         </div>
